@startuml
' ======= layout =========
skinparam backgroundColor #fcf9ea
skinparam titleBorderRoundCorner 15
skinparam titleFontSize 30
skinparam classAttributeIconSize 0
skinparam titleFontName Arial Black
skinparam titleFontColor #f8a978
skinparam roundcorner 20
skinparam stereotypeCBackgroundColor ffc5a1
skinparam class {

ArrowColor ffc5a1
BorderColor White
BackgroundColor badfdb
}


' ======= title =========
center header


endheader
title <b>US1001 - Class Diagram\n

' ======= classes =========
class AddProductController{
+addProduct(price,brand, reference,shortDescription,longDescription,technicalDescription,barcode,width,length,height,weight,productCategory)
}
class AddProductUI{
}
class ProductManagementService{
+ProductManagementService(productRepository)
+addNewProduct(price,brand, reference,shortDescription,longDescription,technicalDescription,barcode,width,length,height,weight,productCategory)
+allProducts()
+productOfIdentity(id)

}
class ProductCategoryManagementService{
 +ProductCategoryManagementService(productCategoryRepository)
 + addNewProductCategory(code,description)
 +allProductCategories()
 +productCategoryOfIdentity(code)
}
class ProductCategoryRepository{
+findAll()
}
class ProductRepository{
+save(product)
}
class Product{
+Product(price,brand, reference,shortDescription,longDescription,technicalDescription,barcode,width,length,height,weight,productCategory)
+equals(o)
+identity()
+price()
+productPrice()
+productBrand()
+productReference()
+productShortDescription()
+productLongDescription()
+productTechnicalDescription()
+productProductionCode()
+barcode()
+productBarcode()
+productWidth()
+productLength()
+productHeight()
+productWeight()
+category()
+productCategory()
}

AddProductUI ..> AddProductController
AddProductController ..> ProductManagementService
AddProductController ..> ProductCategoryManagementService
ProductManagementService ..> ProductRepository
ProductManagementService ..> Product
ProductRepository ..> Product
ProductCategoryManagementService ..> ProductCategoryRepository
@enduml